# FlowSOM_Python

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .readthedocs.yaml  CITATION.bib  CITATION.md  LICENSE  LICENSE.rej  README.md  env.yaml  pyproject.toml  pyproject.toml.rej
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml  test.yaml
docs/: api.md  conf.py  contributing.md  index.md  references.bib  template_usage.md
docs/notebooks/: example.ipynb  parallel.ipynb
src/FlowSOM/: FlowSOM.py  __init__.py  main.py  som.py
src/FlowSOM/io/: __init__.py  read_fcs.py
src/FlowSOM/models/: __init__.py  base_cluster_estimator.py  base_flowsom_estimator.py  consensus_cluster.py  flowsom_estimator.py  som_estimator.py
src/FlowSOM/pl/: __init__.py  _plot_helper_functions.py  plot_functions.py  plot_helper_functions.py
src/FlowSOM/plotting/: __init__.py  _plot_helper_functions.py  plot_functions.py
src/FlowSOM/pp/: __init__.py  fcs_functions.py
src/FlowSOM/preprocessing/: fcs_functions.py
src/FlowSOM/read_write/: __init__.py  read_fcs.py
src/FlowSOM/tl/: _consensus_clustering.py  getter_functions.py
src/FlowSOM/tools/: __init__.py  _consensus_clustering.py  _som.py  getter_functions.py  som.py
src/flowsom/: __init__.py  main.py
src/flowsom/io/: __init__.py  read_fcs.py
src/flowsom/models/: __init__.py  _som.py  base_cluster_estimator.py  base_flowsom_estimator.py  batch_flowsom_estimator.py  consensus_cluster.py  flowsom_estimator.py  numpy_numba.py  pyFlowSOM_som_estimator.py  pyflowsom_estimator.py  som_estimator.py
src/flowsom/models/batch/: __init__.py  _som.py  som_estimator.py
src/flowsom/pl/: _plot_helper_functions.py  plot_functions.py
src/flowsom/pp/: __init__.py  fcs_functions.py
src/flowsom/tl/: __init__.py  getter_functions.py
tests/: conftest.py  test_basic.py
tests/data/: ff.fcs  gatingResult.csv  gating_result.csv  not_preprocessed.fcs
tests/models/: test_BatchFlowSOM.py  test_ConsensusCluster.py  test_FlowSOMModel.py  test_SOMModel.py  test_pyFlowSOM.py
